--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2987,7 +2987,7 @@ hides the force update buttons
   display: none !important;
 }
 
-/*MRB Menus*/
+/* MRB Menus */
 
 .mrb_menu ul.dropdown-menu,
 #navbar_login ul.dropdown-menu,
@@ -3111,9 +3111,9 @@ hides the force update buttons
   margin-bottom: 1px;
 }
 
-/*MRB Menus*/
+/* MRB Menus */
 
-/*App font family*/
+/* App font family */
 
 body,
 input,
@@ -3126,9 +3126,9 @@ div.hopscotch-bubble h3 {
   font-family: "RobotoFont", sans-serif;
 }
 
-/*App font family*/
+/* App font family */
 
-/*Setting buttons*/
+/* Setting buttons */
 
 #settings_plugin_softwareupdate button.btn.btn-primary.btn-block.sticky-footer {
   position: inherit;
@@ -3142,7 +3142,7 @@ div.hopscotch-bubble h3 {
   text-align: right;
 }
 
-/*Setting buttons*/
+/* Setting buttons */
 
 /*Working Area Scrolling*/
 
@@ -3155,9 +3155,9 @@ div.hopscotch-bubble h3 {
   height: 100%;
 }
 
-/*Working Area Scrolling*/
+/* Working Area Scrolling */
 
-/*Scrollbar styling*/
+/* Scrollbar styling */
 
 /* width */
 ::-webkit-scrollbar {
@@ -3179,9 +3179,9 @@ div.hopscotch-bubble h3 {
   background: #555;
 }
 
-/*Scrollbar styling*/
+/* Scrollbar styling */
 
-/*Pnotify styling*/
+/* Pnotify styling */
 
 .ui-pnotify-container.ui-pnotify-shadow {
   color: #383e42;
@@ -3224,9 +3224,9 @@ h4.ui-pnotify-title {
   background-color: #ff8686;
 }
 
-/*Pnotify styling*/
+/* Pnotify styling */
 
-/*Terminal button*/
+/* Terminal button */
 
 button#terminal-send {
   height: 30px;
@@ -3235,9 +3235,9 @@ button#terminal-send {
   float: right;
 }
 
-/*Terminal button*/
+/* Terminal button */
 
-/*FreshDesk button*/
+/* FreshDesk button */
 
 .freshwidget-theme {
   text-shadow: rgba(0, 0, 0, 0.2), -1px, -1px, 1px;
@@ -3319,17 +3319,17 @@ button#terminal-send {
   animation: slideupleft 0.3s ease !important;
 }
 
-/*FreshDesk button*/
+/* FreshDesk button */
 
-/*User Settings API Key button*/
+/* User Settings API Key button */
 
 #usersettings_access a.btn.add-on {
   border-radius: 6px;
 }
 
-/*User Settings API Key button*/
+/* User Settings API Key button */
 
-/*Design Store*/
+/* Design Store */
 
 #designstore_tab_btn .red-dot {
   height: 5px;
@@ -3401,12 +3401,14 @@ button#terminal-send {
   margin-top: 45px;
 }
 
-/*Design Store*/
+/* Design Store */
 
-/*Support Standalone*/
+/* Support Standalone */
+
 #support_overlay > div.modal-body.scrollable > table {
   margin: 20px auto;
 }
+
 /* Support Standalone */
 
 /* Hard refresh overlay */
@@ -3428,11 +3430,85 @@ button#terminal-send {
 
 /* Hard refresh overlay */
 
+/* Material Store */
+
+#material_store_content #loading_spinner_wrapper {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+}
+#material_store_content #loading_spinner {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  color: #ffffff;
+}
+#material_store_content #loading_spinner i {
+  font-weight: bold;
+  font-size: 4em;
+}
+
+#material_store_content #material_store_iframe {
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+  border: none;
+}
+
+#material_store_content .no-internet-connection-section {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-55%);
+  display: block;
+}
+
+#material_store_content .no-internet-connection-section .no-internet-icon img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-80%);
+  padding: 0 5%;
+}
+
+#material_store_content .no-internet-connection-section .no-internet-content {
+  text-align: center;
+  font-size: 20px;
+  padding: 0 60px;
+}
+
+#material_store_content
+  .no-internet-connection-section
+  .no-internet-content
+  h4 {
+  font-size: 20px;
+  margin-bottom: 40px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+#material_store_content .no-internet-connection-section .no-internet-content p {
+  margin-bottom: 30px;
+}
+
+#material_store_content
+  .no-internet-connection-section
+  .no-internet-content
+  .btn.refresh-connection {
+  margin-top: 45px;
+}
+
+/* Material Store */
+
 /* Corner Calibration */
+
 .corner_calibration {
   max-width: 800px;
 }
 .corner_calibration .focus_reminder{
   width: 250px;
 }
+
 /* Corner Calibration */
