- remove homing from the engrave marker step - disable "engrave calibration markers" button if laser is not operational

--- a/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
@@ -22,7 +22,7 @@
 
         <li>{{ _('Engrave the calibrations markers on your material by clicking on this button:') }}<br>
             <button class="btn btn-primary"
-                    data-bind="click: engraveMarkers, enable: (!camera.state.isLocked() && !camera.state.isConnecting())">
+                    data-bind="click: engraveMarkers, enable: (!camera.state.isLocked() && !camera.state.isConnecting() && camera.state.isOperational())">
                 {{ _('Engrave Calibration Markers')  }}
             </button>
             <span class="muted" data-bind="visible: camera.state.isLocked() || camera.state.isConnecting">
