--- a/octoprint_mrbeam/templates/tab_designlib.jinja2
+++ b/octoprint_mrbeam/templates/tab_designlib.jinja2
@@ -112,24 +112,24 @@
 													<div class="entry" data-bind="attr: { id: $root.getEntryId($data) }, template: { name: $root.templateFor($data), data: $data }, css:$root.templateFor($data)"></div>
 												</div>
 
-													<script type="text/html" id="files_template_machinecode_gcode">
-														<div class="file_list_entry icon_card rounded_container">
-															<div class="selection_box"  data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok"></i></div>
+													<script type="text/html" id="files_template_machinecode_gcode" data-test="tab-designlib-mechinecode-file-id">
+														<div class="file_list_entry icon_card rounded_container" data-test="tab-designlib-mechinecode-file-card">
+															<div class="selection_box"  data-bind="click: function(data, ev){$root.updateSelection($data, ev)}" data-test="tab-designlib-mechinecode-file-select-box"><i class="icon icon-ok"></i></div>
 															<div class="preview" data-test="tab-designlib-mechinecode-file" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeGcode($data); $('#wa_tab_btn').tab('show'); } },
 																css: {disabled: $root.workingArea.isPlaced($data)}
 																" ><i class="icon-cog"></i></div>
-															<div class="title dropdown dropup" >
+															<div class="title dropdown dropup" data-test="tab-designlib-mechinecode-file-title">
 																<span class="title_shortened" data-bind="css: $root.getSuccessClass($data), style: { 'font-weight': $root.listHelper.isSelected($data) ? 'bold' : 'normal' }, text: name, attr: {title: name}" ></span>
-																<a type="button" class="dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+																<a type="button" class="dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false" data-test="tab-designlib-mechinecode-file-icon-reorder">
 																	<i class="icon-reorder pull-right"></i>
 																</a>
 																<ul class="dropdown-menu dropdown-menu-right" role="menu">
 																	<li>
-																		<a class="" data-bind="attr: {href: $root.downloadLink($data), css: {disabled: !$root.downloadLink($data)}}"><i class="icon-download-alt" title="{{ _('Download') }}"></i> {{ _('Download') }}</a>
+																		<a class="" data-bind="attr: {href: $root.downloadLink($data), css: {disabled: !$root.downloadLink($data)}}" data-test="tab-designlib-mechinecode-file-download"><i class="icon-download-alt" title="{{ _('Download') }}"></i> {{ _('Download') }}</a>
 																	</li>
 																	<li>
-																		<a class="" data-bind="click: function() { if ($root.enableRemove($data)) { $root.hideAndRemoveFile($data, event); } else { return; } }, css: {disabled: !$root.enableRemove($data)}"><i class="icon-trash" title="{{ _('Remove') }}"></i> {{ _('Remove') }}</a>
+																		<a class="" data-bind="click: function() { if ($root.enableRemove($data)) { $root.hideAndRemoveFile($data, event); } else { return; } }, css: {disabled: !$root.enableRemove($data)}" data-test="tab-designlib-mechinecode-file-remove"><i class="icon-trash" title="{{ _('Remove') }}"></i> {{ _('Remove') }}</a>
 																	</li>
 																	 <li class="divider"></li>
 																	<li class="uploaded">{{ _('Uploaded') }}: <span data-bind="text: formatTimeAgo(date)"></span></li>
