SW-1932 Link social media icons to Mr Beam official accounts

--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -15,12 +15,12 @@
                         <p style="padding: 1.2em 0em 0em 0em;">{{ _('Tag your photos with') }}</p>
                         <p style="font-size: 3.3em; padding: 0.2em 0px"><a href="https://www.instagram.com/mrbeamlasers/" target="_blank">#madewithmrbeam</a></p>
                         <div>
-                            <i class="icon-instagram laser_job_done_image_media_icon"></i>
-                            <i class="icon-facebook-sign laser_job_done_image_media_icon"></i>
-                            <i class="icon-twitter-sign laser_job_done_image_media_icon"></i>
-                            <i class="icon-pinterest-sign laser_job_done_image_media_icon"></i>
-                            <i class="icon-youtube-sign laser_job_done_image_media_icon"></i>
-                            <i class="icon-linkedin-sign laser_job_done_image_media_icon"></i>
+                            <a href="https://www.instagram.com/mrbeamlasers/" target="_blank"><i class="icon-instagram laser_job_done_image_media_icon"></i></a>
+                            <a href="https://www.facebook.com/mrbeamlasercutter/" target="_blank"><i class="icon-facebook-sign laser_job_done_image_media_icon"></i></a>
+                            <a href="https://twitter.com/MrBeamLasers" target="_blank"><i class="icon-twitter-sign laser_job_done_image_media_icon"></i></a>
+                            <a href="https://www.pinterest.com/mrbeamlasers" target="_blank"><i class="icon-pinterest-sign laser_job_done_image_media_icon"></i></a>
+                            <a href="https://www.youtube.com/channel/UC8CIMavXllp6S61JgEqSm4A" target="_blank"><i class="icon-youtube-sign laser_job_done_image_media_icon"></i></a>
+                            <a href="https://www.linkedin.com/company/mrbeamlasers" target="_blank"><i class="icon-linkedin-sign laser_job_done_image_media_icon"></i></a>
                         </div>
                     </div>
             </div>
