--- a/octoprint_mrbeam/templates/settings/reminders_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/reminders_settings.jinja2
@@ -10,7 +10,7 @@
                     laserhead you will have the chance to do it and later start the job.
                     You can disable this reminder in the moment you see it, or in this settings anytime.') }} </p>
                 <label class="checkbox">
-                    <input type="checkbox" data-bind="checked: settings.plugins.mrbeam.focusReminder">
+                    <input type="checkbox" data-bind="checked: settings.plugins.mrbeam.focusReminder" data-test="reminder-settings-focus-reminder">
                     <strong>{{ _('Activate focus reminder') }}</strong>
                 </label>
             </div>
