--- a/octoprint_mrbeam/templates/settings/dev_design_store_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/dev_design_store_settings.jinja2
@@ -7,7 +7,7 @@
         <div class="control-group">
             <label class="control-label" for="settings-mrbeam-design-store-email">Design Store email</label>
             <div class="controls">
-                <input id="settings-mrbeam-design-store-email" type="text" class="input-block-level" data-bind="value: devDsEmail">
+                <input id="settings-mrbeam-design-store-email" data-test="dev-design-store-email" type="text" class="input-block-level" data-bind="value: devDsEmail">
                 <br />
                 <div>Email address to access the design store.</div>
             </div>
@@ -21,7 +21,7 @@
         <div class="control-group">
             <label class="control-label" for="settings-mrbeam-design-store-environment">Choose Environment</label>
             <div class="controls">
-                <select id="settings-mrbeam-design-store-environment"
+                <select id="settings-mrbeam-design-store-environment" data-test="dev-design-store-env"
                 data-bind="value: selectedEnv, event:{ change: changeEnv}">
                     <option value="dev">Development</option>
                     <option value="staging">Staging</option>
