SW-1889 Clean up

--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -1,4 +1,4 @@
-<div id="laser_job_done_dialog" class="modal modal--laser-job-done" data-backdrop="static" style="top:5% !important;">
+<div id="laser_job_done_dialog" class="modal hide fade modal--laser-job-done" data-backdrop="static">
     <div data-bind="visible: !is_dust_mode()">
         <div class="modal-header">
             <a href="#" class="close" data-bind='click: cancel_btn' aria-hidden="true">&times;</a>
