SW-1889 Clean up

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2872,7 +2872,7 @@ hides the force update buttons
 }
 
 .modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-link a:hover {
-  background-color: #e25303;;
+  background-color: #e25303;
   color: #ffffff;
   text-decoration: none;
 }
