SW-1931 Move design store template into the tabs folder

--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -124,7 +124,7 @@
                     {% endif %}
 					{% include 'tab_designlib.jinja2' %}
                     {% include 'tab_messages.jinja2' %}
-                    {% include 'tab_designstore.jinja2' %}
+                    {% include 'tab/tab_designstore.jinja2' %}
                     {% if settings_model.material_store.enabled %}
                         {% include 'tab/tab_materialstore.jinja2' %}
                     {% endif %}
